# cloud_graph_app

./: README.md  hello.py  pyproject.toml
dockerapp/: Dockerfile  appreadme.md  docker-compose.yml  links.csv  main.py  pyproject.toml  requirements.txt
dockerapp/app/: links_with_metadata.csv
dockerapp/app/db/: kuzu.db.wal
dockerapp/static/: style.css
dockerapp/templates/: index.html  instructions.html
notebook/: cleaning_log.csv  failed_processing.csv  links_please_review.csv  links_with_cleaned_content.csv  links_with_content.csv  links_with_metadata.csv
