[project]
name = "graphplay"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "docker>=7.1.0",
    "flask>=3.1.1",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "kuzu>=0.10.0",
    "nest-asyncio>=1.6.0",
    "ollama>=0.4.8",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.6",
    "pip>=25.1.1",
    "playwright>=1.52.0",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.4",
    "requests>=2.32.3",
    "selenium==4.21.0",
    "torch>=2.7.0",
    "yfiles-jupyter-graphs>=1.10.5",
]
